flux/infrastructure/forgejo/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: forgejo
  namespace: forgejo
spec:
  parentRefs:
    - name: dev-local
      namespace: default
      sectionName: https
  hostnames:
    - forgejo.dev.local
  rules:
    - backendRefs:
        - name: forgejo-http
          port: 3000
